Fix landing layout on mobile

--- a/src/app/(app)/HomeIntro.module.css
+++ b/src/app/(app)/HomeIntro.module.css
@@ -1,4 +1,5 @@
 .button {
-  @apply cursor-pointer rounded-lg px-4 py-2 text-[#7E4001] ring-2 ring-[#7E4001];
+  @apply px-2 py-1 md:px-4 md:py-2;
+  @apply cursor-pointer rounded-lg text-[#7E4001] ring-2 ring-[#7E4001];
   @apply font-bold hover:bg-[#7E4001] hover:text-white;
 }
